testCases/parserTestCases/correct/varNameC.cs16
/*
    This tests var name
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(int x){
    int x, y, z[5],a[x];
    ;
}