testCases/parserTestCases/error/idTailE.cs16
/*
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(int args[]){
    sout(,);
    sout,);
    sout x,y);
    sout(x,y)
}